src/components/Home/home.css
.home-section {
  display: flex;
  justify-content: center;
  align-items: center;
  overflow-x: hidden;
  padding: 10px 0;
  height: 100vh;
  background-size: cover;
}

.home-container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  padding: 0 4rem;
}

.home-header {
  text-align: center;
  z-index: 10;
  margin-top: 40px;
}

.home-text {
  color: black;
}

.subheading {
  font-size: 1.5rem;
  margin-bottom: 0.5rem;
}

@media (min-width: 768px) {
  .subheading {
    font-size: 2rem;
  }

  .main-heading {
    font-size: 3.5rem;
  }
}

.home-button-container {
  margin-top: 20px;
}

.rsvp-button {
  background-color: #ff3366;
  color: white;
  padding: 0.75rem 1rem;
  font-size: 18px;
  border-radius: 5px;
  text-decoration: none;
  transition: background-color 0.3s ease-in-out;
}

.rsvp-button:hover {
  background-color: #d01a54;
}

.cherub-right{
  position: absolute;
  height: auto;
  max-height: 40vh;
  width: auto;
  transform: scaleX(-1) rotate(45deg);
}

.cherub-right {
  top: 4rem;
  right: 3rem;
  z-index: 100;
}

@media (max-width: 1100px) {
  .cherub-right {
    max-height: 40vh;
    top: 3rem;
    right: 2rem;
  }
  

}

@media (max-width: 768px) {
  .cherub-right {
    max-height: 30vh;
  }
}

@media (max-width: 480px) {
   .cherub-right {
    max-height: 25vh;
    top: 6rem;
    right: 2rem;
  }
}

